<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="callback"
            type="com.texaconnect.texa.interfaces.CallBacks" />

    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/H2">

        <ImageView
            android:id="@+id/close_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_close_grey" />

        <TextView
            android:id="@+id/forgotPassTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="@color/texaGray"
            android:textSize="@dimen/common_heading" />
    </LinearLayout>



    <TextView
        android:id="@+id/forgot_pass_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass_hint"
        android:layout_marginRight="@dimen/H2"
        android:layout_marginLeft="@dimen/H2"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_pass_hint"
        android:layout_marginLeft="@dimen/H2"
        android:layout_margin="@dimen/H2"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/texaGray"
            android:textSize="@dimen/H5" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/H2"
        android:layout_marginRight="@dimen/H2"
        android:onClick="@{(v)->callback.resetClick(v)}"
        android:text="@string/send"
        android:textSize="@dimen/H5"
        android:textStyle="bold"/>




</LinearLayout>
</layout>