<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="callback"
            type="com.texaconnect.texa.interfaces.LoginCallBacks" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="@dimen/H2">

        <ImageView
            android:id="@+id/close_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_close_grey" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/close_register"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/close_register"
            android:text="@string/register_via_email"
            android:textColor="@color/texaGray"
            android:textSize="@dimen/common_heading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="40dp"

            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="51.5dp"
                    android:hint="@string/email"
                    android:text="test@test.com"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey_text"
                    android:textSize="@dimen/H5" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/H5">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="51.5dp"
                    android:hint="@string/name"
                    android:text="Test"
                    android:inputType="textPersonName"
                    android:textColor="@color/grey_text"
                    android:textSize="@dimen/H5" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/H5"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="51.5dp"
                    android:hint="@string/password"
                    android:text="Test1234"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_text"
                    android:textSize="@dimen/H5" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="300dp"
                android:layout_height="21dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="5dp"
                android:text="@string/password_needs"
                android:textSize="10dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/H5"
               >

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="51.5dp"
                    android:hint="@string/location"

                    android:textColor="@color/grey_text"
                    android:textSize="@dimen/H5" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="153dp"
                android:text="@string/register"
                android:textSize="@dimen/H5"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>
</layout>